--- a/config.ini
+++ b/config.ini
@@ -1,18 +1,19 @@
 [TELEGRAM]
-BOT_TOKEN=
+BOT_TOKEN=1238624326:AAGhPa4DoRC5IDqYqINY2GLRuIw6eDLNG_E
 
 [WATSON_ASSISTANT]
-IAM_TOKEN=
-URL=
-ASSISTANT_ID=
+IAM_TOKEN=yCyo6B2Vs-oT0twpRwfE5bN2OUctYJ3BCBSuohJ9BSix
+URL=https://api.us-south.assistant.watson.cloud.ibm.com/instances/ac5fca7b-c5cb-4c02-a3d3-1bb342b8ecef
+ASSISTANT_ID=90f61ecb-f8d4-40b5-bd10-fe9d4755e59b
 
 [WATSON_T2S]
-IAM_TOKEN=
-URL=
+IAM_TOKEN=nAdaPfqAlGN3j81hFrNe9-7sRF7wYSsZgmeLz0YqagJS
+URL=https://api.us-south.text-to-speech.watson.cloud.ibm.com/instances/5bdfc2e8-c432-422b-bfe8-ae4190b796c4
 
 [WATSON_S2T]
-IAM_TOKEN=
-URL=
+IAM_TOKEN=-W__zgsrsRtolWZuJssgK9a_OTG84nNDlf4SvaYlTEMk
+URL=https://api.us-south.speech-to-text.watson.cloud.ibm.com/instances/631291f2-d360-41da-b715-5f5075a807ca
 
-[TMDB]
-API_KEY=
+[API_SPELLS_CLASSES]
+;URL=http://127.0.0.1:5000/
+URL=https://guarded-everglades-23297.herokuapp.com/
