Alteração final heroku

--- a/config.ini
+++ b/config.ini
@@ -17,3 +17,6 @@ URL=https://api.us-south.speech-to-text.watson.cloud.ibm.com/instances/631291f2-
 [API_SPELLS_CLASSES]
 ;URL=http://127.0.0.1:5000/
 URL=https://guarded-everglades-23297.herokuapp.com/
+
+[BOT_TELEGRAM_HEROKU]
+URL=https://thawing-journey-81420.herokuapp.com/
