--- a/config.ini
+++ b/config.ini
@@ -1,22 +1,22 @@
 [TELEGRAM]
-BOT_TOKEN=1238624326:AAGhPa4DoRC5IDqYqINY2GLRuIw6eDLNG_E
+BOT_TOKEN=
 
 [WATSON_ASSISTANT]
-IAM_TOKEN=yCyo6B2Vs-oT0twpRwfE5bN2OUctYJ3BCBSuohJ9BSix
-URL=https://api.us-south.assistant.watson.cloud.ibm.com/instances/ac5fca7b-c5cb-4c02-a3d3-1bb342b8ecef
-ASSISTANT_ID=90f61ecb-f8d4-40b5-bd10-fe9d4755e59b
+IAM_TOKEN=
+URL=
+ASSISTANT_ID=
 
 [WATSON_T2S]
-IAM_TOKEN=nAdaPfqAlGN3j81hFrNe9-7sRF7wYSsZgmeLz0YqagJS
-URL=https://api.us-south.text-to-speech.watson.cloud.ibm.com/instances/5bdfc2e8-c432-422b-bfe8-ae4190b796c4
+IAM_TOKEN=
+URL=
 
 [WATSON_S2T]
-IAM_TOKEN=-W__zgsrsRtolWZuJssgK9a_OTG84nNDlf4SvaYlTEMk
-URL=https://api.us-south.speech-to-text.watson.cloud.ibm.com/instances/631291f2-d360-41da-b715-5f5075a807ca
+IAM_TOKEN=
+URL=
 
 [API_SPELLS_CLASSES]
 ;URL=http://127.0.0.1:5000/
-URL=https://guarded-everglades-23297.herokuapp.com/
+URL=
 
 [BOT_TELEGRAM_HEROKU]
-URL=https://thawing-journey-81420.herokuapp.com/
+URL=
